Fix typo in documentation

--- a/README.org
+++ b/README.org
@@ -103,7 +103,7 @@ return {
 }
 #+end_src
 
-And add ~vim.ls.enable({'prolog'})~ to ~$XDG_CONFIG_DIR/nvim/init.lua~.
+And add ~vim.lsp.enable({'prolog'})~ to ~$XDG_CONFIG_DIR/nvim/init.lua~.
 
 ** Native LSP (for Neovim >= 0.5 < 0.11)
 
